2010-07-16 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Fix uncaught exceptions introduced in 1.3 RC 1 (trac
	ticket #105).

2010-07-12 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 RC 1 released.

	* Task.py: Raise proper KeyError exception in Task.key_retcode(key) when
	key is not found in any finished workers (trac ticket #102).

2010-07-06 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: Added documentation for reserved set_default() and set_info()
	keys (trac ticket #101).

	* scripts/clubak.py: Merge latest code display changes made on clush to
	clubak, including "--color={never,always,auto}" (trac ticket #89). Updated
	documentation accordingly.

2010-06-29 H. Doreau <henri.doreau@gmail.com>

	* Worker/Pdsh.py: removed obsolete _read() and _readerr() methods that
	overrode EngineClient methods without raising an EOFException when
	read() reads nothing (trac ticket #97).

2010-06-28 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Centralized handling of exceptions raised from Main
	and separate Task thread because some exceptions handled only in Main
	thread were not caught (fix btw trac ticket #93).

2010-06-17 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 beta 6 released.

2010-06-16 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Check for trailing args when using -c/--copy (trac
	ticket #88).

	* NodeSet.py, NodeUtils.py: Add a way to retrieve all nodes when "all"
	external call is missing but "map" and "list" calls are specified (trac
	ticket #90).

	* Task.py: Add handling of stderr during task.copy().

	* Worker/Ssh.py: Add handling of stderr (when needed) during scp.

	* scripts/clush.py: Fix display issue with clush --copy when some nodes
	are not reachable.

	* Version 1.3 beta 5 released.

2010-06-15 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Add --color={never,always,auto} command line option
	and color: {never,always,auto} config option (trac ticket #68), defaulting