@@ -900,6 +900,57 @@ class NodeSetTest(unittest.TestCase):
         else:
             self.fail("ns1 != None failed")
 
+    def testNodeSetNone(self):
+        """test NodeSet methods behavior with None argument"""
+        nodeset = NodeSet(None)
+        self.assertEqual(len(nodeset), 0)
+        self.assertEqual(list(nodeset), [])
+        nodeset.update(None)
+        self.assertEqual(list(nodeset), [])
+        nodeset.intersection_update(None)
+        self.assertEqual(list(nodeset), [])
+        nodeset.difference_update(None)
+        self.assertEqual(list(nodeset), [])
+        nodeset.symmetric_difference_update(None)
+        self.assertEqual(list(nodeset), [])
+        n = nodeset.union(None)
+        self.assertEqual(list(n), [])
+        self.assertEqual(len(n), 0)
+        n = nodeset.intersection(None)
+        self.assertEqual(list(n), [])
+        n = nodeset.difference(None)
+        self.assertEqual(list(n), [])
+        n = nodeset.symmetric_difference(None)
+        self.assertEqual(list(n), [])
+        nodeset = NodeSet("abc[3,6-89],def[3-98,104,128-133]")
+        self.assertEqual(len(nodeset), 188)
+        nodeset.update(None)
+        self.assertEqual(len(nodeset), 188)
+        nodeset.intersection_update(None)
+        self.assertEqual(len(nodeset), 0)
+        self.assertEqual(list(nodeset), [])
+        nodeset = NodeSet("abc[3,6-89],def[3-98,104,128-133]")
+        self.assertEqual(len(nodeset), 188)
+        nodeset.difference_update(None)
+        self.assertEqual(len(nodeset), 188)
+        nodeset.symmetric_difference_update(None)
+        self.assertEqual(len(nodeset), 188)
+        n = nodeset.union(None)
+        self.assertEqual(len(nodeset), 188)
+        n = nodeset.intersection(None)
+        self.assertEqual(list(n), [])
+        self.assertEqual(len(n), 0)
+        n = nodeset.difference(None)
+        self.assertEqual(len(n), 188)
+        n = nodeset.symmetric_difference(None)
+        self.assertEqual(len(n), 188)
+        self.assertFalse(n.issubset(None))
+        self.assertTrue(n.issuperset(None))
+        n = NodeSet(None)
+        n.clear()
+        self.assertEqual(len(n), 0)
+
+
 
 if __name__ == '__main__':
     suite = unittest.TestLoader().loadTestsFromTestCase(NodeSetTest)
