@@ -1,3 +1,8 @@
+2010-07-21 S. Thiell <stephane.thiell@cea.fr>
+
+	* NodeSet.py: Like in some previous version, support None as argument for
+	most methods (trac ticket #106).
+
 2010-07-16 S. Thiell <stephane.thiell@cea.fr>
 
 	* scripts/clush.py: Fix uncaught exceptions introduced in 1.3 RC 1 (trac
